src/style.css
:root {
    --theme-1: Aqua;
    --theme-2: #FFC300;
    --theme-3: #FF7383;
    --theme-4: #FF8419;
    --theme-5: #D42525;
    --white: #ffffff;
    --black: #000000;
    --black-lighter: #0D0D0D;
    --grey-dark: #1E1C1C;
    --grey: #282828;
    --grey-lighter: #363636; 
    --grey-light: #969696;
    --header-height: 64.3px;
    --spacer: 1.5rem;
    --border-radius: 12px;
    --app-opacity: .8;
    --font-1: 'NATS Regular', system-ui, sans-serif;
    --font-2: "IBM Plex Mono", monospace;
}

@font-face {
    font-family: 'NATS Regular';
    font-style: normal;
    font-weight: normal;
    src: url('/NATS-Regular.woff') format('woff');
}

body {
    margin: 0;
    font-family: var(--font-2);
    color: white;
    height: calc(100vh - 2rem);
    letter-spacing: 0.2rem;
    line-height: 1.4;
    opacity: var(--app-opacity);
    background-color: var(--black);
}

h1, h2 {
    margin: 0;
    font-family: var(--font-1);
    text-transform: uppercase;
    letter-spacing: 0.3rem;
}

a {
    color: inherit;
    text-decoration: none;
    &:hover {
        text-decoration: underline;
    }
}

header {
    background-color: var(--black);
    padding: var(--spacer);
    height: var(--header-height);
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: var(--spacer);

    & a {
        font-family: var(--font-1);
        text-transform: uppercase;
        margin-top: auto;
        font-size: 1.25rem;
    }

    & nav {
        display: flex;
        gap: var(--spacer);
    }

}
.logo {
    width: 10rem;

    & img {
        width: 100%;
    }
}

.app {
    display: flex;
    background-color: var(--grey);
    box-sizing: border-box;
    width: 100vw;
    overflow: hidden;
    height: calc(100vh - var(--header-height));
    min-width: 1000px;
}

.sidebar {
    background-color: var(--black-lighter);
    padding: 3rem var(--spacer);
    display: flex;
    flex-direction: column;
    gap: 3rem;
    
    & button {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: .5rem;
        padding: 0;
        background: none;
        border: 0;
        color: var(--white);
        cursor: pointer;

        & span {
            font-family: var(--font-1);
            text-transform: uppercase;
        }

        & svg {
            height: 2rem;
            fill: #FFF;
        }

        &::after {
            content: '';
            display: block;
            width: 5px;
            height: 5px;
            border-radius: 50%;
            transition: width 0.3s ease;
            background-color: var(--black);

        }
        &:nth-child(1).active::after {
            background-color: var(--theme-1);
        }
        &:nth-child(2).active::after {
            background-color: var(--theme-2);
        }
        &:nth-child(3).active::after {
            background-color: var(--theme-3);
        }
    }
}

.editor {
    padding: var(--spacer);
    overflow: scroll;
    min-width: calc(50% - var(--spacer) * 2);
}

.help,
.editor {
    box-sizing: border-box; /* include padding/border in width */
}

.help {
    display: flex;
    flex-direction: column;
    gap: var(--spacer);
    padding: var(--spacer) var(--spacer) var(--spacer) 0;
    height: calc(100vh - var(--header-height));
    overflow: scroll;
    width: 100%;
}

.help__component {
    position: relative;
    border-radius: var(--border-radius);
    height: 100%;
    font-family: var(--font-2);
    font-size: 1rem;
    border: 2px solid;
    overflow-x: scroll;
    &:nth-child(1) {
        border-color: var(--theme-1);
    }
    &:nth-child(2) {
        border-color: var(--theme-2);
    }
    &:nth-child(3) {
        border-color: var(--theme-3);
    }
}

.help__component input {
    position: absolute;
    top: 1rem;
    right: 1rem;
    border: none;
    padding: 0.5rem 1rem;
    background-color: var(--grey-lighter);
    outline: none;
    color: white;
    width: 100px;
    
}
.help__component input::placeholder {
    color: white;
}

#circuit {
    padding: var(--spacer);
    background-color: var(--black-lighter);
}

.qc-circuit {
    margin-top: -1rem;
}
.qc-circuit line {
	stroke: var(--white)!important;
    stroke-width: 2px;
}

.qc-circuit text {
    font-size: .75rem;
    font-weight: bold;
}

.qc-circuit rect,
.qc-circuit circle {
    fill: var(--black-lighter)!important;
	stroke: white!important;
}
.qc-circuit text {
    fill: var(--white);
	stroke: none!important;
}

.qc-wire-init {
    transform: translateX(-0.5rem);
}

.qc-circuit ellipse, 
.qc-circuit path {
    fill: transparent!important;
	stroke: var(--white)!important;
    stroke-width: 2px;
	cursor: grab;
}

.qc-circuit .qc-gate-label {
    fill: var(--white)!important;
    text-transform: lowercase;
}
.qc-wire-label {
    transform: translate(1px,-4px);
    fill: var(--white)!important;
}

.qc-gate-params {
    display: none;
}

.prism-code-editor {
    font-family: var(--font-2)!important;
    letter-spacing: .2rem;

    font-size: 1rem;
}

*:focus {
    outline: 1px dashed var(--theme-1);
    outline-offset: 4px;
}

